--- a/clifton.html
+++ b/clifton.html
@@ -3,15 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LA Walking Tours - Home</title>
+    <title>Downtown Architecture Tour - LA Walking Tours</title>
     <link rel="stylesheet" href="./css/style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
   </head>
   <body>
-    <header>
+   <header>
       <a href="./index.html">
         <img src="./Images/LA_walking.png" alt="logo"
       /></a>
@@ -31,80 +28,82 @@
       </nav>
     </header>
 
-    <section class="hero">
-      <h2>Welcome to LA Walking Tours</h2>
+<section class="tour-details">
+  <h1>Urban Development & Historic Landmarks Tour</h1>
+  <div class="tour-card">
+    <div class="tour-image-container">
+      <img src="https://www.lawalkingtours.com/sysimgdocs/rszimages/5-Clifton-s-Cafeteria_li437_5.jpg" alt="Urban Development & Historic Landmarks Tour" class="tour-image" />
+    </div>
+    <div class="tour-text">
       <p>
-        We bring our enthusiasm to entertain you with the history, architecture,
-        and culture of our beautiful city, Los Angeles!
+        Experience the history of Los Angeles from its urban development in the early 20th Century to now a home of historic landmarks. See the transformation of a commercially developed neighborhood into a residential community. You will see how our early 1900s buildings are part of the renovation of a new downtown!
       </p>
-    </section>
+    </div>
+  </div>
 
-    <section class="tours">
-      <div class="card-div">
-        <div class="card-1">
-          <img
-            src="./Images/vc_spotlight_griffithpark_hero_rf_815660072_1280x640.jpg"
-            alt="image1"
-          />
-        </div>
-        <div class="card-2">
-          <img src="./Images/pexels-wolfram-k-745236.jpg" alt="image1" />
-        </div>
+  <!-- Full-width content below the card -->
+  <div class="full-width-content">
+    <!-- Two-column layout for Upcoming Dates and Booking Information -->
+    <div class="two-column-layout">
+      <div class="column">
+        <h2>Upcoming Dates</h2>
+        <ul>
+          <li>1:30 PM - Sunday, March 23rd</li>
+          <li>1:30 PM - Monday, March 24th</li>
+          <li>1:30 PM - Tuesday, March 25th</li>
+        </ul>
       </div>
-      <div class="tour-text">
-        <div>
-          <h3>Public Tour</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          </p>
-        </div>
-
-        <div>
-          <h3>Private Tour</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          </p>
-        </div>
+      <div class="column">
+        <h2>Booking Information</h2>
+        <p>
+          All tours require advanced ticket purchases. Please use the "Purchase Tickets" option below when making your booking. Service fees are applied at the time of checkout.
+        </p>
       </div>
-    </section>
+    </div>
 
-    <section class="hero">
-      <h2>Learn more about the history of LA</h2>
-      <p style="margin-bottom: 30px">
-        We bring our enthusiasm to entertain you with the history, architecture,
-        and culture of our beautiful city, Los Angeles!
-      </p>
-      <a href="#" class="btn">Learn More</a>
-    </section>
+    <!-- Tour Information -->
+    <h2>Tour Information</h2>
+    <ul>
+      <li><strong>Starting Time:</strong> 1:30 PM</li>
+      <li><strong>Starting Point:</strong> Angels Flight Railway</li>
+      <li><strong>Starting Address:</strong> 349 S. Hill Street, Los Angeles, CA 90013</li>
+      <li><strong>Distance:</strong> 1.5 miles</li>
+      <li><strong>Duration:</strong> 2 hours</li>
+      <li><strong>Ending Location:</strong> Pershing Square (532 S. Olive Street, 90013)</li>
+    </ul>
 
-    <section class="favorites">
-      <h2>Our Favorites</h2>
-      <div class="main-fav">
-        <div class="sub-main-fav">
-          <div class="fav-card">
-            <img src="./Images/pexels-erica-zhao-2670273.jpg" alt="image1" />
-          </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</p>
-        </div>
-        <div class="sub-main-fav">
-          <div class="fav-card">
-            <img src="./Images/pexels-paul-deetman-2695679.jpg" alt="image1" />
-          </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</p>
-        </div>
-        <div class="sub-main-fav">
-          <div class="fav-card">
-            <img
-              src="./Images/pexels-vincent-gerbouin-2263683.jpg"
-              alt="image1"
-            />
-          </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</p>
-        </div>
-      </div>
-    </section>
+    <!-- Ticket Pricing -->
+    <h2>Ticket Pricing</h2>
+    <table>
+      <thead>
+        <tr>
+          <th>Ticket Type</th>
+          <th>Price</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Adult (ages 13 and up)</td>
+          <td>$30</td>
+        </tr>
+        <tr>
+          <td>Child (ages 5 - 12)</td>
+          <td>$20</td>
+        </tr>
+        <tr>
+          <td>Toddler (ages 4 and under)</td>
+          <td>Free</td>
+        </tr>
+      </tbody>
+    </table>
+
+    <!-- Private Events -->
+    <h2>Private Events</h2>
+    <p>
+      Would you like us to host this as a private event? If so, <a href="/#" style="color: blue;">Contact Us</a> for availability and a quote.
+    </p>
+  </div>
+</section>
     <footer>
       <!-- Quick Links -->
       <div class="footer-section">
@@ -139,16 +138,10 @@
       <div class="footer-section">
         <h3>Follow Us</h3>
         <div class="social-icons">
-          <a href="#" aria-label="Facebook"
-            ><i class="fab fa-facebook-f"></i
-          ></a>
+          <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
           <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-          <a href="#" aria-label="Instagram"
-            ><i class="fab fa-instagram"></i
-          ></a>
-          <a href="#" aria-label="LinkedIn"
-            ><i class="fab fa-linkedin-in"></i
-          ></a>
+          <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+          <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
           <a href="#" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
         </div>
       </div>
@@ -162,7 +155,7 @@
       </div>
     </footer>
 
-    <script>
+     <script>
       // Toggle Navbar on Hamburger Click
       const hamburger = document.querySelector(".hamburger");
       const navbar = document.querySelector(".navbar");
