--- a/friendshipknot.html
+++ b/friendshipknot.html
@@ -3,15 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LA Walking Tours - Home</title>
+    <title>Chinatown & Little Tokyo Tour - LA Walking Tours</title>
     <link rel="stylesheet" href="./css/style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+   
   </head>
   <body>
-    <header>
+     <header>
       <a href="./index.html">
         <img src="./Images/LA_walking.png" alt="logo"
       /></a>
@@ -31,81 +29,63 @@
       </nav>
     </header>
 
-    <section class="hero">
-      <h2>Welcome to LA Walking Tours</h2>
+<section class="tour-details">
+  <h1>Friendship Knot</h1>
+  <div class="tour-card">
+    <div class="tour-image-container">
+      <img src="https://www.lawalkingtours.com/sysimgdocs/rszimages/3-Friendship-Knot_dh157_3.jpg" alt="Little Tokyo History Tour" class="tour-image" />
+    </div>
+    <div class="tour-text">
       <p>
-        We bring our enthusiasm to entertain you with the history, architecture,
-        and culture of our beautiful city, Los Angeles!
+        Walk into Downtown LA’s largest ethnic neighborhood of Little Tokyo and learn about the history of the Japanese people with growth, migration, World War II, and its aftermath. Find out more about how this community endured hardships and success while retaining a strong cultural identity.
       </p>
-    </section>
+    </div>
+  </div>
 
-    <section class="tours">
-      <div class="card-div">
-        <div class="card-1">
-          <img
-            src="./Images/vc_spotlight_griffithpark_hero_rf_815660072_1280x640.jpg"
-            alt="image1"
-          />
-        </div>
-        <div class="card-2">
-          <img src="./Images/pexels-wolfram-k-745236.jpg" alt="image1" />
-        </div>
+  <!-- Full-width content below the card -->
+  <div class="full-width-content">
+    <!-- Two-column layout for Upcoming Dates and Booking Information -->
+    <div class="two-column-layout">
+      <div class="column">
+        <h2>Upcoming Dates</h2>
+        <ul>
+          <li>10:30 AM - Friday, April 4th</li>
+          <li>10:30 AM - Saturday, April 5th</li>
+          <li>10:30 AM - Friday, April 11th</li>
+        </ul>
       </div>
-      <div class="tour-text">
-        <div>
-          <h3>Public Tour</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          </p>
-        </div>
-
-        <div>
-          <h3>Private Tour</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          </p>
-        </div>
+      <div class="column">
+        <h2>Booking Information</h2>
+        <p>
+          All tours require advanced ticket purchases. Please use the "Purchase Tickets" option below when making your booking. Service fees are applied at the time of checkout.
+        </p>
       </div>
-    </section>
+    </div>
 
-    <section class="hero">
-      <h2>Learn more about the history of LA</h2>
-      <p style="margin-bottom: 30px">
-        We bring our enthusiasm to entertain you with the history, architecture,
-        and culture of our beautiful city, Los Angeles!
-      </p>
-      <a href="#" class="btn">Learn More</a>
-    </section>
+    <!-- Tour Information -->
+    <h2>Tour Information</h2>
+    <ul>
+      <li><strong>Starting Point:</strong> Outside of the Japanese American Museum</li>
+      <li><strong>Starting Address:</strong> 100 N. Central Avenue, Los Angeles, CA 90012</li>
+      <li><strong>Distance:</strong> 0.5 miles</li>
+      <li><strong>Duration:</strong> 1 hour</li>
+      <li><strong>Ending Location:</strong> Japanese American Cultural & Community Center in Little Tokyo (244 San Pedro Street, 90012)</li>
+    </ul>
 
-    <section class="favorites">
-      <h2>Our Favorites</h2>
-      <div class="main-fav">
-        <div class="sub-main-fav">
-          <div class="fav-card">
-            <img src="./Images/pexels-erica-zhao-2670273.jpg" alt="image1" />
-          </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</p>
-        </div>
-        <div class="sub-main-fav">
-          <div class="fav-card">
-            <img src="./Images/pexels-paul-deetman-2695679.jpg" alt="image1" />
-          </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</p>
-        </div>
-        <div class="sub-main-fav">
-          <div class="fav-card">
-            <img
-              src="./Images/pexels-vincent-gerbouin-2263683.jpg"
-              alt="image1"
-            />
-          </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</p>
-        </div>
-      </div>
-    </section>
-    <footer>
+    <!-- Private Tour Information -->
+    <h2>Private Tour Information</h2>
+    <p>
+      We can host up to 20 people at a rate of $400 on a 2-hour private tour led by one tour guide.
+    </p>
+    <p>
+      Make your request below, and we will get back to you on tour guide availability and steps to complete your booking. Payment is taken once your request is confirmed, with service fees applied at the time of checkout.
+    </p>
+
+
+  </div>
+</section>
+
+       <footer>
       <!-- Quick Links -->
       <div class="footer-section">
         <h3>Quick Links</h3>
@@ -162,7 +142,7 @@
       </div>
     </footer>
 
-    <script>
+  <script>
       // Toggle Navbar on Hamburger Click
       const hamburger = document.querySelector(".hamburger");
       const navbar = document.querySelector(".navbar");
