--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
       <div class="container">
         <a class="navbar-brand" href="./index.html">
-          <img src="./Images/LA_walking.png" alt="logo" height="50">
+          <img src="./Images/LA_walking.webp" alt="logo" height="50">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -376,6 +376,7 @@
             <li class="nav-item">
               <a class="nav-link" href="/stories.html">Stories</a>
             </li>
+             <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
           </ul>
         </div>
       </div>
@@ -424,10 +425,10 @@
     <section class="tours">
       <div class="card-div">
         <div class="card-1">
-          <img src="./Images/vc_spotlight_griffithpark_hero_rf_815660072_1280x640.jpg" alt="Griffith Park">
+          <img src="https://drupal-prod.visitcalifornia.com/sites/default/files/styles/fluid_1920/public/vc_spotlight_griffithpark_hero_rf_815660072_1280x640.jpg.webp?itok=coEHVmD0" alt="Griffith Park">
         </div>
         <div class="card-2">
-          <img src="./Images/pexels-wolfram-k-745236.jpg" alt="Downtown LA">
+          <img src="https://images.pexels.com/photos/745236/pexels-photo-745236.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Downtown LA">
         </div>
       </div>
       <div class="tour-text">
@@ -463,19 +464,19 @@
       <div class="main-fav">
         <div class="sub-main-fav">
           <div class="fav-card">
-            <img src="./Images/pexels-erica-zhao-2670273.jpg" alt="Hollywood Walk of Fame">
+            <img src="https://images.pexels.com/photos/2670273/pexels-photo-2670273.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Hollywood Walk of Fame">
           </div>
           <p>Explore the iconic Hollywood Walk of Fame and learn about the entertainment industry's history.</p>
         </div>
         <div class="sub-main-fav">
           <div class="fav-card">
-            <img src="./Images/pexels-paul-deetman-2695679.jpg" alt="Downtown Architecture">
+            <img src="https://images.pexels.com/photos/2695679/pexels-photo-2695679.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Downtown Architecture">
           </div>
           <p>Discover the stunning Art Deco and Modernist architecture of Downtown Los Angeles.</p>
         </div>
         <div class="sub-main-fav">
           <div class="fav-card">
-            <img src="./Images/pexels-vincent-gerbouin-2263683.jpg" alt="Venice Beach">
+            <img src="https://images.pexels.com/photos/2263683/pexels-photo-2263683.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Venice Beach">
           </div>
           <p>Experience the vibrant culture and street performers of Venice Beach and its famous boardwalk.</p>
         </div>
@@ -523,6 +524,7 @@
               <li class="nav-item mb-2"><a href="/calendar.html" class="nav-link p-0 footer-link">Calendar</a></li>
               <li class="nav-item mb-2"><a href="/tourPage.html" class="nav-link p-0 footer-link">Tours</a></li>
               <li class="nav-item mb-2"><a href="/stories.html" class="nav-link p-0 footer-link">Stories</a></li>
+               <li class="nav-item mb-2"><a href="contact.html" class="nav-link p-0 footer-link">Contact</a></li>
             </ul>
           </div>
 
