--- a/friendshipknot.html
+++ b/friendshipknot.html
@@ -116,7 +116,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
       <div class="container">
         <a class="navbar-brand" href="./index.html">
-          <img src="./Images/LA_walking.png" alt="logo" height="50">
+          <img src="./Images/LA_walking.webp" alt="logo" height="50">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -135,6 +135,7 @@
             <li class="nav-item">
               <a class="nav-link " href="/stories.html">Stories</a>
             </li>
+             <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
           </ul>
         </div>
       </div>
@@ -238,6 +239,7 @@
               <li class="nav-item mb-2"><a href="/calendar.html" class="nav-link p-0 footer-link">Calendar</a></li>
               <li class="nav-item mb-2"><a href="/tourPage.html" class="nav-link p-0 footer-link">Tours</a></li>
               <li class="nav-item mb-2"><a href="/stories.html" class="nav-link p-0 footer-link">Stories</a></li>
+               <li class="nav-item mb-2"><a href="contact.html" class="nav-link p-0 footer-link">Contact</a></li>
             </ul>
           </div>
 
